# sam2_realtime_ros2

./: .gitmodules  CITATION.cff  README.md  requirements.txt  run.sh  setup_env.sh
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  makefile  run.sh
sam2_realtime/: README.md  package.xml  setup.cfg  setup.py
sam2_realtime/sam2_realtime/: bbox_prompt_node.py  debug_node.py  depth_test.py  ekf.py  mask2pcl.py  sam2_realtime_multi_node.py  sam2_realtime_node.py  track_node.py  track_node_2.py  yolo_mask_prompt_node.py  yolo_prompt_node.py
sam2_realtime/sam2_realtime/segment-anything-2-real-time/: .gitignore
sam2_realtime/sam2_realtime/segment-anything-2-real-time/demo/: demo.py  demo_realsense_box.py  demo_webcam_box.py  demo_webcam_yolo.py
sam2_realtime_bringup/: CMakeLists.txt  README.md  package.xml
sam2_realtime_bringup/launch/: bbox_prompt_node.sh  bringup.sh  debug_node.sh  depth_test.sh  mask2pcl.launch.py  mask2pcl.sh  master.launch.py  master.sh  sam2_realtime_multi_node.launch.py  sam2_realtime_multi_node.sh  sam2_realtime_node.launch.py  sam2_realtime_node.sh  track_node.launch.py  track_node.sh  track_node_2.launch.py  track_node_2.sh  yolo_mask_prompt_node.sh  yolo_prompt_node.sh
sam2_realtime_msgs/: CMakeLists.txt  README.md  package.xml
sam2_realtime_msgs/msg/: TrackedObject.msg
