<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <!-- Basic package metadata -->
  <name>sam2_realtime_msgs</name>
  <version>4.2.0</version> <!-- This can be bumped manually -->
  <description>Msgs for sam2_realtime</description>
  <maintainer email="rodrigo.serra@tecnico.ulisboa.pt">Rodrigo Serra</maintainer>
  <license>GPL-3</license> <!-- Chosen license for message definitions -->

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Test dependencies (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Indicate that this is a ROS 2 interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Message-related dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Export section for ROS build system -->
  <export>
    <build_type>ament_cmake</build_type>
    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
  </export>

</package>
